# LibreClinicaMUW

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  MIGRATION.md  README.md  compose.yaml  dependency-check-suppressions.xml  docker-compose.sso.yml  pom.xml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  release-image.yml  security.yml
core/: pom.xml
deploy/: README.md  compose.production.yaml  setup-ubuntu-host.sh
docker/config/: datainfo.properties
docker/sso/: README.md
docs/: agent-setup.md  pom.xml
docs/development/: audit-coverage-2026-06-11.md  dev-machine-windows.md  index.md  long-running-study-operations.md  sidebar.md  smoke-testing.md  (+1 more)
odm/: pom.xml
retinal-inference/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
retinal-inference/src/retinal_inference/: __init__.py  audit.py  config.py  main.py  tasks.py  worker.py
retinal-inference/src/retinal_inference/api/: __init__.py  health.py  jobs.py  screen.py
retinal-inference/src/retinal_inference/db/: __init__.py  connection.py  queue.py
retinal-inference/src/retinal_inference/inference/: __init__.py  adapter.py  e2e_parser.py  mirage.py  placeholder.py
retinal-inference/src/retinal_inference/models/: __init__.py  requests.py  responses.py
retinal-inference/tests/: conftest.py  test_health.py  test_jobs.py  test_placeholder_determinism.py  test_screen.py  test_unknown_task_rejected.py  test_worker.py
retinal-inference/tests/fixtures/: fake.e2e
web/: pom.xml
ws/: pom.xml
(+3286 files in other folders)
